--- a/sobota-uloha/css/style.css
+++ b/sobota-uloha/css/style.css
@@ -1,4 +1,4 @@
-/* Responzivne menu */
+/*!* Responzivne menu *!
 .topnav {
     overflow: hidden;
     background-color: #333;
@@ -26,5 +26,42 @@
 
 .topnav .icon {
     display: none;
+}*/
+
+/* Fixed NAV bar */
+body {margin:0;}
+
+.navbar {
+    overflow: hidden;
+    background-color: rgba(0,0,0,30%);
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
 
+.navbar a {
+    float: right;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.navbar a:hover {
+    color: black;
+}
+
+.main {
+    padding: 16px;
+    margin-top: 30px;
+    height: 1500px; /* Used in this example to enable scrolling */
+}
+
+img {
+    width: 1500px;
+    height: 300px;
+    object-fit: cover;
+    filter: contrast(80%);
+}
