--- a/sobota-uloha/css/style.css
+++ b/sobota-uloha/css/style.css
@@ -39,8 +39,8 @@ header {
     width: 100%;
     height: 75px;
     position: fixed;
-    top: 0%;
-    right: 0%;
+    top: 0;
+    right: 0;
 }
 
 .nav {
@@ -98,19 +98,26 @@ header {
 .fotka, .popis, .cislo, .e-mail, .adresa
 {
     border: 2px solid black;
-    flex: 1 3;
+    flex: 1 2;
     row-gap: 50px;
 }
 
-.gallery {
+.founder {
     width: auto;
-    height: 120%;
+    height: 290px;
+}
+
+img.gallery {
+    width: 500px;
+    height: auto;
+    object-fit: cover;
 }
 
 .gallery1 {
-    width: 360px;
-    height: 120%;
+    width: 500px;
+    height: 100%;
     object-fit: cover;
+    overflow: hidden;
 }
 
 h1 {
@@ -156,7 +163,6 @@ iframe {
     display: flex;
     justify-content: center;
     background-color: black;
-    justify-content: center;
     align-items: center;
 }
 
@@ -185,7 +191,7 @@ a.instagram:hover{
 }
 
 .logo2 {
-    flex: 1;
+    flex: 2;
 }
 
 .rychlerychle {
@@ -219,4 +225,14 @@ a.nav2 {
 
 input, textarea {
     background-color: lightslategray;
+}
+
+img.gallery:hover {
+    transform: scale(1.3);
+    transition: transform .2s;
+}
+
+img.gallery1:hover {
+    transform: scale(1.3);
+    transition: transform .2s;
 }
