--- a/plne-responzivny-web/css/keyframe.css
+++ b/plne-responzivny-web/css/keyframe.css
@@ -1,8 +1,8 @@
-.topnav a:hover {
-    border-bottom: 2px solid rgba(250,250,250, 40%);
-}
-
-.malfy:hover {
-    filter: grayscale(0%);
-    transition-duration: 0.8s;
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
 }
