--- a/plne-responzivny-web/css/style.css
+++ b/plne-responzivny-web/css/style.css
@@ -2,10 +2,11 @@
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
 }
+/*------------ NAVBAR ------------*/
 
 .topnav {
     overflow: hidden;
-    background-color: rgba(0, 0, 0, 100%)
+    background-color: rgba(0, 0, 0, 100%);
 }
 
 .topnav a {
@@ -22,21 +23,11 @@
     display: none;
 }
 
-.posun {
-    float: right;
-}
-
-.malfy {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-    filter: grayscale(100%);
-}
-
 .topnav a:hover {
     border-bottom: 2px solid rgba(250, 250, 250, 40%);
 }
 
+/*------------ SLIDER PHOTO------------*/
 
 .mySlides {
     display: none;
@@ -87,7 +78,7 @@
 }
 
 
-/*------------DROPDOWN MENU SKUSKA---------------*/
+/*------------ DROPDOWN MENU ---------------*/
 
 
 
