--- a/plne-responzivny-web/css/style.css
+++ b/plne-responzivny-web/css/style.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
 }
+
 /*------------ NAVBAR ------------*/
 
 .topnav {
@@ -81,9 +82,6 @@
 /*------------ DROPDOWN MENU ---------------*/
 
 
-
-
-
 /* Add a black background color to the top navigation */
 .topnav {
     background-color: #333;
@@ -136,7 +134,7 @@
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
 
@@ -172,6 +170,7 @@
     .topnav a:not(:first-child), .dropdown .dropbtn {
         display: none;
     }
+
     .topnav a.icon {
         float: right;
         display: block;
@@ -180,19 +179,30 @@
 
 /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
 @media screen and (max-width: 600px) {
-    .topnav.responsive {position: relative;}
+    .topnav.responsive {
+        position: relative;
+    }
+
     .topnav.responsive a.icon {
         position: absolute;
         right: 0;
         top: 0;
     }
+
     .topnav.responsive a {
         float: none;
         display: block;
         text-align: left;
     }
-    .topnav.responsive .dropdown {float: none;}
-    .topnav.responsive .dropdown-content {position: relative;}
+
+    .topnav.responsive .dropdown {
+        float: none;
+    }
+
+    .topnav.responsive .dropdown-content {
+        position: relative;
+    }
+
     .topnav.responsive .dropdown .dropbtn {
         display: block;
         width: 100%;
