--- a/plne-responzivny-web/css/media.css
+++ b/plne-responzivny-web/css/media.css
@@ -1,7 +1,8 @@
 /* Extra small devices (phones, 600px and down) */
 @media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {
+    .topnav a:not(:first-child), .dropdown .dropbtn {
         display: none;
+        height: 64px;
     }
 
     .topnav a.icon {
@@ -13,7 +14,27 @@
         position: relative;
     }
 
+    .topnav.responsive .dropdown {
+        float: none;
+    }
+
+    .topnav.responsive .dropdown-content {
+        position: relative;
+    }
+
+    .topnav.responsive .dropdown .dropbtn {
+        display: block;
+        width: 100%;
+        text-align: left;
+    }
+
     .topnav.responsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+
+    .topnav.responsive a.icon {
         position: absolute;
         right: 0;
         top: 0;
@@ -29,12 +50,18 @@
         max-width: 25px;
         height: auto;
     }
+
+    #logo {
+        display: inline-block;
+        margin-left: 170px;
+    }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
-    .topnav a:not(:first-child) {
+    .topnav a:not(:first-child), .dropdown .dropbtn {
         display: none;
+        height: 64px;
     }
 
     .topnav a.icon {
@@ -46,7 +73,27 @@
         position: relative;
     }
 
+    .topnav.responsive .dropdown {
+        float: none;
+    }
+
+    .topnav.responsive .dropdown-content {
+        position: relative;
+    }
+
+    .topnav.responsive .dropdown .dropbtn {
+        display: block;
+        width: 100%;
+        text-align: left;
+    }
+
     .topnav.responsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+
+    .topnav.responsive a.icon {
         position: absolute;
         right: 0;
         top: 0;
@@ -66,8 +113,9 @@
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
-    .topnav a:not(:first-child) {
+    .topnav a:not(:first-child), .dropdown .dropbtn {
         display: none;
+        height: 64px;
     }
 
     .topnav a.icon {
@@ -95,6 +143,12 @@
         max-width: 25px;
         height: auto;
     }
+
+    .topnav.responsive .dropdown .dropbtn {
+        display: block;
+        width: 100%;
+        text-align: left;
+    }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
@@ -104,12 +158,47 @@
         height: auto;
     }
 
-    .topnav a:not(:first-child) {
+    .topnav a:not(:first-child), .dropdown .dropbtn {
         display: flex;
+        height: 64px;
     }
 
     .topnav a.icon {
         display: none;
+    }
+
+    .topnav.responsive .dropdown-content {
+        position: relative;
+    }
+
+    topnav.responsive .dropdown .dropbtn {
+        display: block;
+        width: 100%;
+        text-align: left;
+    }
+
+    .topnav.responsive .dropdown {
+        float: none;
+    }
+
+    .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+
+    .topnav.responsive a.icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+
+    .topnav.responsive {
+        position: relative;
+    }
+
+    #arrow1, #arrow2, #arrow3, #arrow4 {
+        margin-left: 5px
     }
 }
 
@@ -120,11 +209,47 @@
         height: auto;
     }
 
-    .topnav a:not(:first-child) {
+    .topnav a:not(:first-child), .dropdown .dropbtn {
         display: flex;
+        height: 64px;
     }
 
     .topnav a.icon {
         display: none;
     }
+
+    .topnav.responsive .dropdown-content {
+        position: relative;
+    }
+
+    topnav.responsive .dropdown .dropbtn {
+        display: block;
+        width: 100%;
+        text-align: left;
+    }
+
+    .topnav.responsive .dropdown {
+        float: none;
+    }
+
+    .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+
+    .topnav.responsive a.icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+
+    .topnav.responsive {
+        position: relative;
+    }
+
+    #arrow1, #arrow2, #arrow3, #arrow4 {
+        margin-left: 5px
+    }
+
 }
