--- a/plne-responzivny-web/css/style.css
+++ b/plne-responzivny-web/css/style.css
@@ -44,7 +44,8 @@
 /* Caption text */
 .text {
     color: #f2f2f2;
-    font-size: 15px;
+    font-size: 20px;
+    font-weight: bold;
     padding: 8px 12px;
     position: absolute;
     bottom: 8px;
@@ -134,7 +135,7 @@
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
 
@@ -165,47 +166,27 @@
     display: block;
 }
 
-/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
-@media screen and (max-width: 600px) {
-    .topnav a:not(:first-child), .dropdown .dropbtn {
-        display: none;
-    }
-
-    .topnav a.icon {
-        float: right;
-        display: block;
-    }
+.container {
+    display: inline-block;
+    cursor: pointer;
 }
 
-/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-@media screen and (max-width: 600px) {
-    .topnav.responsive {
-        position: relative;
-    }
+.bar1, .bar2, .bar3 {
+    width: 35px;
+    height: 5px;
+    background-color: #333;
+    margin: 6px 0;
+    transition: 0.4s;
+}
 
-    .topnav.responsive a.icon {
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
+.change .bar1 {
+    transform: translate(0, 11px) rotate(-45deg);
+}
 
-    .topnav.responsive a {
-        float: none;
-        display: block;
-        text-align: left;
-    }
+.change .bar2 {
+    opacity: 0;
+}
 
-    .topnav.responsive .dropdown {
-        float: none;
-    }
-
-    .topnav.responsive .dropdown-content {
-        position: relative;
-    }
-
-    .topnav.responsive .dropdown .dropbtn {
-        display: block;
-        width: 100%;
-        text-align: left;
-    }
+.change .bar3 {
+    transform: translate(0, -11px) rotate(45deg);
 }
