--- a/plne-responzivny-web/css/style.css
+++ b/plne-responzivny-web/css/style.css
@@ -113,9 +113,12 @@ span {
     display: block;
     color: #f2f2f2;
     text-align: center;
-    padding: 14px 16px;
+    padding: 15px 15px 15px 30px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 15px;
+    font-family: 'Poppins', sans-serif;
+    text-transform: uppercase;
+    font-weight: bold;
 }
 
 /* Add an active class to highlight the current page */
@@ -137,14 +140,17 @@ span {
 
 /* Style the dropdown button to fit inside the topnav */
 .dropdown .dropbtn {
-    font-size: 17px;
     border: none;
     outline: none;
     color: white;
-    padding: 14px 16px;
     background-color: inherit;
-    font-family: inherit;
     margin: 0;
+    padding: 15px 15px 15px 30px;
+    text-decoration: none;
+    font-size: 15px;
+    font-family: 'Poppins', sans-serif;
+    text-transform: uppercase;
+    font-weight: bold;
 }
 
 /* Style the dropdown content (hidden by default) */
@@ -152,16 +158,22 @@ span {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 160px;
+    min-width: 150px;
+    min-width: 200px;
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
     z-index: 1;
+    text-decoration: none;
+    font-size: 15px;
+    font-family: 'Poppins', sans-serif;
+    text-transform: uppercase;
+    font-weight: bold;
 }
 
 /* Style the links inside the dropdown */
 .dropdown-content a {
     float: none;
     color: black;
-    padding: 12px 16px;
+    padding: 12px 16px 12px 12px;
     text-decoration: none;
     display: block;
     text-align: left;
