--- a/plne-responzivny-web/css/media.css
+++ b/plne-responzivny-web/css/media.css
@@ -177,6 +177,15 @@
         width: 100%;
         text-align: left;
     }
+
+    .dropdown-content a {
+        float: none;
+        color: black;
+        padding: 12px 16px 12px 50px;
+        text-decoration: none;
+        display: block;
+    }
+
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
