--- a/plne-responzivny-web/css/style.css
+++ b/plne-responzivny-web/css/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    color: white;
+    color: #FCFCFC;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -61,16 +61,6 @@ span {
 }
 
 /* Caption text */
-.text {
-    color: #f2f2f2;
-    font-size: 20px;
-    font-weight: bold;
-    padding: 8px 12px;
-    position: absolute;
-    bottom: 8px;
-    width: 100%;
-    text-align: center;
-}
 
 /* The dots/bullets/indicators */
 .dot {
@@ -78,7 +68,7 @@ span {
     height: 10px;
     width: 10px;
     margin: 0 2px;
-    background-color: #bbb;
+    background-color: #FCFCFC;
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.6s ease;
@@ -125,7 +115,7 @@ span {
 
 /* Add an active class to highlight the current page */
 .active {
-    background-color: #3a3a3a;
+    background-color: turquoise;
     color: white;
 }
 
@@ -222,11 +212,14 @@ span {
 }
 
 /*-------------IDEA OF THE COMAPNY---------------*/
+.concept {
+    padding: 50px;
+}
 .concept-container {
     display: flex;
     flex-wrap: wrap;
     background-color: black;
-    padding: 100px;
+    justify-content: center;
 }
 
 .concept-container > div {
@@ -234,11 +227,9 @@ span {
     margin: 10px;
     text-align: center;
     line-height: 75px;
-    justify-content: center;
-    flex: 1 3;
     max-height: 500px;
     max-width: 350px;
-    padding: 10px;
+    padding: 15px;
 }
 
 #icon-con1, #icon-con2, #icon-con3 {
@@ -255,7 +246,7 @@ span {
     font-size: 28px;
     overflow-wrap: normal;
     margin: 16px 40px;
-    width: 250px;
+    max-width: 250px;
     word-break: normal;
     line-height: 50px;
     text-align: left;
@@ -268,10 +259,12 @@ span {
 
 .kon-con1:hover {
     border: 2px solid turquoise;
+    transition:  .3s;
 }
 
 .kon-con3:hover {
     border: 2px solid turquoise;
+    transition:  .3s;
 }
 
 .line-con {
@@ -290,8 +283,119 @@ span {
 .con-p {
     font-size: 15px;
     margin: 16px 40px;
+    padding: 10px 0 20px 0;
     text-align: left;
     line-height: 20px;
     font-weight: 200;
     color: #D0D0D0;
+}
+
+/*-------------SERVICES--------------*/
+
+.headline-con {
+    display: flex;
+    flex-direction: row;
+}
+
+.con-main {
+    display: flex;
+    flex-direction: column;
+}
+.line-con1 {
+    border: 2px solid turquoise;
+    width: 80px;
+    display: block;
+    text-align: left;
+    margin: 35px 15px 0 0;
+}
+
+.services {
+    padding:100px 200px 100px 200px;
+}
+
+header > h2 {
+    font-size: 48px;
+    margin: 0;
+    text-transform: uppercase;
+}
+
+.con-look {
+    text-transform: uppercase;
+    margin: 20px 0 55px 0;
+}
+
+.content1 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.content1 > div {
+    background-color: #121212;
+    margin: 10px;
+    text-align: center;
+    line-height: 75px;
+    max-height: 500px;
+    max-width: 350px;
+    padding: 15px;
+    border-bottom: 4px solid #FCFCFC;
+}
+
+.content2 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.content2 > div {
+    background-color: #121212;
+    margin: 10px;
+    text-align: center;
+    line-height: 75px;
+    max-height: 500px;
+    max-width: 350px;
+    padding: 15px;
+    border-bottom: 4px solid #FCFCFC;
+}
+
+#turquise {
+    background-color: #66fcf1;
+}
+
+#turquise > i, p {
+    color: black;
+}
+
+h3.turquise-bl {
+    color: black;
+    font-weight: bold;
+    font-size: 24px;
+    overflow-wrap: normal;
+    margin: 16px 40px;
+    max-width: 250px;
+    word-break: normal;
+    line-height: 50px;
+    text-align: left;
+}
+
+div > h3 {
+    font-weight: bold;
+    font-size: 28px;
+    overflow-wrap: normal;
+    margin: 16px 40px;
+    max-width: 250px;
+    word-break: normal;
+    line-height: 50px;
+    text-align: left;
+    color: #FCFCFC;
+}
+
+.content1 > .white:hover {
+    border-bottom: 4px solid turquoise;
+    transition: 0.3s;
+}
+
+.content2 > div:hover {
+    border-bottom: 4px solid turquoise;
+    transition: 0.3s;
 }
