--- a/plne-responzivny-web/css/media.css
+++ b/plne-responzivny-web/css/media.css
@@ -66,7 +66,7 @@
 
     .dropdown-content a {
         float: none;
-        color: white;
+        color: #FCFCFC;
         padding: 12px 16px 12px 50px;
         text-decoration: none;
         display: block;
@@ -131,7 +131,7 @@
 
     .dropdown-content a {
         float: none;
-        color: white;
+        color: #FCFCFC;
         padding: 12px 16px 12px 50px;
         text-decoration: none;
         display: block;
@@ -179,7 +179,7 @@
 
     .dropdown-content a {
         float: none;
-        color: black;
+        color: #000000;
         padding: 12px 16px 12px 50px;
         text-decoration: none;
         display: block;
@@ -243,7 +243,7 @@
     }
 
     .text {
-        color: turquoise;
+        color: #66FCF1;
         font-size: 16px;
         font-weight: bold;
         padding: 8px 8px 12px 100px;
@@ -327,7 +327,7 @@
     }
 
     .text {
-        color: turquoise;
+        color: #66FCF1;
         font-size: 32px;
         font-weight: bold;
         padding: 8px 8px 12px 200px;
