--- a/plne-responzivny-web/css/style.css
+++ b/plne-responzivny-web/css/style.css
@@ -8,7 +8,7 @@ html {
 
 /*------------ BODY ------------*/
 body {
-    background-color: black;
+    background-color: #000000;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -17,12 +17,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p, i {
-    color: white;
+    color: #FCFCFC;
     font-family: 'Heebo', sans-serif;
 }
 
 span {
-    color: turquoise;
+    color: #66FCF1;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -48,7 +48,7 @@ span {
 }
 
 .topnav a:hover {
-    color: turquoise;
+    color: #66FCF1;
 }
 
 /*------------ SLIDER PHOTO------------*/
@@ -99,7 +99,7 @@ span {
 
 /* Add a black background color to the top navigation */
 .topnav {
-    background-color: black;
+    background-color: #000000;
     overflow: hidden;
 }
 
@@ -119,7 +119,7 @@ span {
 
 /* Add an active class to highlight the current page */
 .active {
-    background-color: turquoise;
+    background-color: #66FCF1;
 }
 
 /* Hide the link that should open and close the topnav on small screens */
@@ -137,7 +137,7 @@ span {
 .dropdown .dropbtn {
     border: none;
     outline: none;
-    color: white;
+    color: #FCFCFC;
     background-color: inherit;
     margin: 0;
     padding: 15px 15px 15px 30px;
@@ -167,7 +167,7 @@ span {
 /* Style the links inside the dropdown */
 .dropdown-content a {
     float: none;
-    color: black;
+    color: #000000;
     padding: 12px 16px 12px 12px;
     text-decoration: none;
     display: block;
@@ -176,12 +176,12 @@ span {
 
 /* Add a dark background on topnav links and the dropdown button on hover */
 .topnav a:hover, .dropdown:hover .dropbtn {
-    color: turquoise;
+    color: #66FCF1;
 }
 
 /* Add a grey background to dropdown links on hover */
 .dropdown-content a:hover {
-    color: turquoise;
+    color: #66FCF1;
 }
 
 /* Show the dropdown menu when the user moves the mouse over the dropdown button */
@@ -221,7 +221,7 @@ span {
 .concept-container {
     display: flex;
     flex-wrap: wrap;
-    background-color: black;
+    background-color: #000000;
     justify-content: center;
 }
 
@@ -238,7 +238,7 @@ span {
 #icon-con1, #icon-con2, #icon-con3 {
     font-size: 50px;
     text-align: left;
-    color: turquoise;
+    color: #66FCF1;
     display: block;
     margin: 40px 40px;
 
@@ -257,21 +257,21 @@ span {
 }
 
 .kon-con2 {
-    border: 2px solid turquoise;
+    border: 2px solid #66FCF1;
 }
 
 .kon-con1:hover {
-    border: 2px solid turquoise;
+    border: 2px solid #66FCF1;
     transition:  .3s;
 }
 
 .kon-con3:hover {
-    border: 2px solid turquoise;
+    border: 2px solid #66FCF1;
     transition:  .3s;
 }
 
 .line-con {
-    border: 2px solid turquoise;
+    border: 2px solid #66FCF1;
     width: 80px;
     display: block;
     text-align: left;
@@ -305,7 +305,7 @@ span {
     flex-direction: column;
 }
 .line-con1 {
-    border: 2px solid turquoise;
+    border: 2px solid #66FCF1;
     width: 80px;
     display: block;
     text-align: left;
@@ -366,11 +366,11 @@ header > h2 {
 }
 
 #turquise > i, p {
-    color: black;
+    color: #000000;
 }
 
 h3.turquise-bl {
-    color: black;
+    color: #000000;
     font-weight: bold;
     font-size: 24px;
     overflow-wrap: normal;
@@ -394,11 +394,11 @@ div > h3 {
 }
 
 .content1 > .white:hover {
-    border-bottom: 4px solid turquoise;
+    border-bottom: 4px solid #66FCF1;
     transition: 0.3s;
 }
 
 .content2 > div:hover {
-    border-bottom: 4px solid turquoise;
+    border-bottom: 4px solid #66FCF1;
     transition: 0.3s;
 }
