--- a/plne-responzivny-web/css/keyframe.css
+++ b/plne-responzivny-web/css/keyframe.css
@@ -8,47 +8,55 @@
 }
 
 @-webkit-keyframes zoom {
-    from {-webkit-transform:scale(0)}
-    to {-webkit-transform:scale(1)}
+    from {
+        -webkit-transform: scale(0)
+    }
+    to {
+        -webkit-transform: scale(1)
+    }
 }
 
 @keyframes zoom {
-    from {transform:scale(0)}
-    to {transform:scale(1)}
+    from {
+        transform: scale(0)
+    }
+    to {
+        transform: scale(1)
+    }
 }
 
-@keyframes animate4{
-    0%{
+@keyframes animate4 {
+    0% {
         bottom: -100%;
     }
-    100%{
+    100% {
         bottom: 100%;
     }
 }
 
-@keyframes animate3{
-    0%{
+@keyframes animate3 {
+    0% {
         right: -100%;
     }
-    100%{
+    100% {
         right: 100%;
     }
 }
 
-@keyframes animate2{
-    0%{
+@keyframes animate2 {
+    0% {
         top: -100%;
     }
-    100%{
+    100% {
         top: 100%;
     }
 }
 
-@keyframes animate1{
-    0%{
+@keyframes animate1 {
+    0% {
         left: -100%;
     }
-    100%{
+    100% {
         left: 100%;
     }
 }
