JP GENERATION - START PROGRES BAR AN PROJECT GALLERY

--- a/plne-responzivny-web/css/style.css
+++ b/plne-responzivny-web/css/style.css
@@ -481,6 +481,8 @@ div > h3 {
 
 .services {
     padding: 100px 50px 100px 50px;
+
+    /*-------------PROJECT-GALLERY--------------*/
 }
 
 /*-------------BUTTOM--------------*/
