--- a/plne-responzivny-web/css/style.css
+++ b/plne-responzivny-web/css/style.css
@@ -490,8 +490,9 @@ div > h3 {
     overflow-x: scroll;
     white-space: nowrap;
 }
+
 .project {
-padding: 100px 50px 100px 50px;
+    padding: 100px 0 100px 0;
 }
 
 ::-webkit-scrollbar {
@@ -499,16 +500,11 @@ padding: 100px 50px 100px 50px;
 }
 
 .slide {
-    font-size: 42px;
     max-width: 100%;
     max-height: 480px;
-    margin: 15px;
+    margin: 5px;
     background: #000000;
     display: inline-block;
-    color: #FFF;
-    text-align: center;
-    vertical-align: middle;
-    line-height: 190px;
 }
 
 .pro-gal {
@@ -807,4 +803,63 @@ header > .skills {
     max-width: 450px;
 }
 
-/*-------------PROGRES BAR--------------*/
+/*-------------SKILL BAR--------------*/
+
+.container-skill {
+    height: 300px;
+    max-width: 500px;
+    background: #000000;
+    margin: 0 auto;
+}
+
+.progress-bar {
+    margin: 10px 0;
+    position: relative;
+}
+
+.progress-title-holder {
+    margin-bottom: 5px;
+    font-family: Montserrat, sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+    color: #FCFCFC;
+}
+
+.progress-number-wrapper {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.progress-number-mark {
+    margin: 0 5px 4px 0;
+    border-radius: 3px;
+    padding: 0 8px;
+    display: inline-block;
+    float: right;
+}
+
+.progress-number-wrapper,
+.progress-number-mark {
+    font-family: Open Sans, sans-serif;
+    font-size: 11px;
+    line-height: 24px;
+    height: 24px;
+    letter-spacing: 0px;
+    font-weight: 600;
+    font-style: normal;
+    text-transform: none;
+    color: #66FCF1;
+}
+
+.progress-content-outter {
+    height: 6px;
+    background-color: #7a7c7a;
+}
+
+.progress-content {
+    height: 100%;
+    background-color: #66FCF1;
+    width: 0%;
+}
