--- a/plne-responzivny-web/css/style.css
+++ b/plne-responzivny-web/css/style.css
@@ -483,7 +483,7 @@ div > h3 {
     padding: 100px 50px 100px 50px;
 }
 
-    /*-------------PROJECT-GALLERY--------------*/
+/*-------------PROJECT-GALLERY--------------*/
 .gallery {
     width: 100%;
     height: auto;
@@ -792,8 +792,8 @@ header > .skills {
 
 .skill-text {
     font-size: 15px;
-    margin: 16px 16px 40px 125px;
-    padding: 10px 0 20px 0;
+    margin: 16px 0 40px 125px;
+    padding: 10px 0 0 0;
     text-align: left;
     line-height: 20px;
     font-weight: 300;
@@ -806,10 +806,11 @@ header > .skills {
 /*-------------SKILL BAR--------------*/
 
 .container-skill {
-    height: 300px;
-    max-width: 500px;
+    height: 100%;
+    width: 100%;
     background: #000000;
-    margin: 0 auto;
+    margin: 0 0 40px 125px;
+    line-height: 30px;
 }
 
 .progress-bar {
@@ -819,9 +820,9 @@ header > .skills {
 
 .progress-title-holder {
     margin-bottom: 5px;
-    font-family: Montserrat, sans-serif;
-    font-size: 15px;
-    font-weight: 400;
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+    font-weight: 500;
     color: #FCFCFC;
 }
 
@@ -833,33 +834,57 @@ header > .skills {
 }
 
 .progress-number-mark {
-    margin: 0 5px 4px 0;
+    margin: 0 5px 0 0;
     border-radius: 3px;
-    padding: 0 8px;
+    padding-left: 8px;
     display: inline-block;
     float: right;
+    padding-top: 10px;
 }
 
 .progress-number-wrapper,
 .progress-number-mark {
-    font-family: Open Sans, sans-serif;
-    font-size: 11px;
-    line-height: 24px;
+    font-size: 15px;
     height: 24px;
-    letter-spacing: 0px;
-    font-weight: 600;
+    letter-spacing: 0;
     font-style: normal;
     text-transform: none;
-    color: #66FCF1;
+    color: #D0D0D0;
+    font-family: 'Heebo', sans-serif;
+    font-weight: 300;
 }
 
 .progress-content-outter {
     height: 6px;
     background-color: #7a7c7a;
+    margin-bottom: 30px;
 }
 
 .progress-content {
     height: 100%;
     background-color: #66FCF1;
-    width: 0%;
+    width: 0;
+}
+
+.skill-list {
+    display: flex;
+    flex-direction: row;
+    padding: 0 0 100px 0;
+}
+
+.abilites {
+    flex: 1;
+}
+
+.abbilites-img {
+    flex: 1;
+}
+
+.gt {
+    max-width: 500px;
+    max-height: 750px;
+}
+
+.skill-img {
+    margin-left: 80px;
 }
