--- a/plne-responzivny-web/css/style.css
+++ b/plne-responzivny-web/css/style.css
@@ -960,5 +960,7 @@ header > .skills {
 .come-on:hover {
     border: 2px solid #4fc2b9;
     animation-delay: 0.4s;
-    box-shadow: inset 10px 1px 70px 10px rgba(79,194,185,0.7);
+    box-shadow: inset 10px 1px 70px 10px rgba(79, 194, 185, 0.7);
 }
+
+/*-------------FOOTER--------------*/
