--- a/plne-responzivny-web/css/style.css
+++ b/plne-responzivny-web/css/style.css
@@ -536,20 +536,6 @@ div > h3 {
     margin-left: 20%;
 }
 
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    padding-top: 100px;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.9);
-}
-
 .modalImage {
     margin: auto;
     display: block;
@@ -1308,7 +1294,7 @@ i:hover {
 }
 
 .port-foto {
-    padding: 100px 50px 0px 50px;
+    padding: 100px 50px 0 50px;
 }
 
 
