--- a/kurz/sobota-uloha/css/style.css
+++ b/kurz/sobota-uloha/css/style.css
@@ -5,8 +5,8 @@
     color: white;
 }
 
-html{
-    scroll-behavior:smooth
+html {
+    scroll-behavior: smooth
 }
 
 body {
@@ -17,6 +17,7 @@ body {
     display: flex;
     flex-direction: column;
 }
+
 /* ---HEADER--- */
 header {
     background-color: #3a3a3a;
@@ -30,12 +31,11 @@ header {
     object-fit: cover;
 
 
-
 }
 
 /* ---STATICKA NAVIACIA--- */
 .navbar {
-    background-color: rgba(0,0,0,70%);
+    background-color: rgba(0, 0, 0, 70%);
     width: 100%;
     height: 75px;
     position: fixed;
@@ -68,7 +68,7 @@ header {
 }
 
 .nav:hover {
-    border-bottom: 2px solid rgba(250,250,250, 40%);
+    border-bottom: 2px solid rgba(250, 250, 250, 40%);
 }
 
 /* ---OBSAH--- */
@@ -95,8 +95,7 @@ header {
     padding: 20px;
 }
 
-.fotka, .popis, .cislo, .e-mail, .adresa
-{
+.fotka, .popis, .cislo, .e-mail, .adresa {
     border: 2px solid black;
     flex: 1 2;
     row-gap: 50px;
@@ -139,6 +138,7 @@ h1 {
     width: 100%;
     height: 70px;
 }
+
 /* ---FOOTER--- */
 
 footer {
@@ -186,8 +186,8 @@ iframe {
     flex-direction: row;
 }
 
-a.instagram:hover{
-  color: #d2be0e;
+a.instagram:hover {
+    color: #d2be0e;
 }
 
 .logo2 {
