--- a/plne-responzivny-web/css/style.css
+++ b/plne-responzivny-web/css/style.css
@@ -555,7 +555,7 @@ div > h3 {
     height: 150px;
 }
 
-.close {
+.close-proj {
     position: absolute;
     top: 15px;
     right: 35px;
@@ -565,8 +565,8 @@ div > h3 {
     transition: 0.3s;
 }
 
-.close:hover,
-.close:focus {
+.close-proj:hover,
+.close-proj:focus {
     color: rgba(255, 0, 0, 90%);
     cursor: pointer;
 }
@@ -1052,21 +1052,20 @@ header > .skills {
     margin: 0;
     box-sizing: border-box;
 }
-
+/*----row----*/
 .container-port {
     max-width: 1370px;
     margin: auto;
-}
-
-.row {
     display: flex;
     flex-wrap: wrap;
 }
 
-img {
-    max-width: 100%;
-    vertical-align: middle;
+.column-port {
+    flex: 100%; /* Zmena: 100% pre mobilné zariadenia */
+    max-width: 100%; /* Zmena: 100% pre mobilné zariadenia */
+    padding: 5px;
 }
+
 
 .gallery-port {
     width: 100%;
@@ -1092,19 +1091,16 @@ img {
 }
 
 .gallery-item {
-    width: auto;
-    max-height: 90vh;
-    margin: 0 auto;
+    position: relative;
 }
 
 .gallery-item img {
-    display: block;
-    max-width: 100%;
-    max-height: 100%;
-    margin: 0 auto;
+    width: 100%;
+    height: auto;
+    margin: 5px;
 }
 
-.gallery-port .gallery-filter {
+.gallery-filter {
     padding: 0 15px;
     width: 100%;
     text-align: center;
@@ -1135,11 +1131,6 @@ img {
     color: #66FCF1;
 }
 
-.gallery-port .gallery-item {
-    width: calc(100% / 3);
-    padding: 5px;
-    display: none;
-}
 
 .gallery-port .gallery-item-inner .image-overlay img {
     transition: opacity 0.9s ease, transform 0.9s ease;
@@ -1195,7 +1186,7 @@ img {
 .modal-port {
     display: none;
     position: fixed;
-    padding-top: 100px;
+    padding: 100px;
     z-index: 999;
     left: 0;
     top: 0;
@@ -1203,7 +1194,7 @@ img {
     height: 100%;
     overflow: auto;
     background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(0, 0, 0, 0.7);
 }
 
 .modal-content {
@@ -1216,10 +1207,12 @@ img {
     height: 80vh;
 }
 
-.close {
-    position: absolute;
-    top: 15px;
-    right: 35px;
+.modal-image {
+    transition: transform 0.3s ease;
+
+}
+
+.close-port-fot {
     color: #FCFCFC;
     font-size: 40px;
     font-weight: bold;
@@ -1227,7 +1220,7 @@ img {
     transition: color 0.3s ease;
 }
 
-.close:hover {
+.close-port-fot:hover {
     color: rgba(255, 0, 0, 90%);
     cursor: pointer;
 }
@@ -1297,4 +1290,35 @@ i:hover {
     padding: 100px 50px 0 50px;
 }
 
+#photoCountContainer {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    display: flex;
+    align-items: center;
+}
+
+#photoCount {
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 20px;
+    z-index: 9999;
+    font-family: 'Heebo', sans-serif;
+    color: #f1f1f1;
+    font-weight: 200;
+    position: fixed;
+    top: 25px;
+    left: 33px;
+}
+
+#photoclosecontainer {
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 5px 10px;
+    border-radius: 5px;
+    z-index: 9999;
+    position: fixed;
+    top: 10px;
+    right: 35px;
+}
 
